// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`socket actions should create ConnectServerAction with existing connection 1`] = `
Object {
  "payload": Object {
    "host": "irc.network",
    "newConnection": false,
    "port": 6667,
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "server1",
  },
  "type": "SOCKET/CONNECT_TO_SERVER",
}
`;

exports[`socket actions should create ConnectServerAction with new connection 1`] = `
Object {
  "payload": Object {
    "host": "irc.network",
    "newConnection": true,
    "port": 6667,
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECT_TO_SERVER",
}
`;

exports[`socket actions should create ConnectionClosedAction 1`] = `
Object {
  "payload": Object {
    "hadError": false,
  },
  "route": Object {
    "bufferKey": "@all",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_CLOSED",
}
`;

exports[`socket actions should create ConnectionClosedAction with error 1`] = `
Object {
  "payload": Object {
    "hadError": true,
  },
  "route": Object {
    "bufferKey": "@all",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_CLOSED",
}
`;

exports[`socket actions should create ConnectionEstablishedAction 1`] = `
Object {
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_ESTABLISHED",
}
`;

exports[`socket actions should create ConnectionFailedAction 1`] = `
Object {
  "payload": Object {
    "message": "Error message",
    "name": "Error",
    "stack": undefined,
  },
  "route": Object {
    "bufferKey": "@all",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_FAILED",
}
`;

exports[`socket actions should create DisconnectFromServerAction 1`] = `
Object {
  "payload": Object {
    "quitMessage": "Goodbye!",
  },
  "route": Object {
    "bufferKey": "@none",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/DISCONNECT_FROM_SERVER",
}
`;

exports[`socket actions should create LookupFailedAction 1`] = `
Object {
  "payload": Object {
    "error": [Error: error while looking up],
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "serverKey": "serverKey",
  "type": "SOCKET/LOOKUP_FAILED",
}
`;

exports[`socket actions should create LookupSuccessAction 1`] = `
Object {
  "payload": Object {
    "address": "address",
    "family": "family",
    "host": "irc.network",
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "serverKey": "serverKey",
  "type": "SOCKET/LOOKUP_SUCCESS",
}
`;

exports[`socket actions should create SendRawMessageAction 1`] = `
Object {
  "payload": Object {
    "raw": "PRIVMSG #channel :hello world",
  },
  "route": Object {
    "bufferKey": "@none",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/SEND_RAW_MESSAGE",
}
`;
